// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollableContainer ScrollableContainer correctly sets height and overflow props 1`] = `
<div
  className="box overflowScroll paddingX0 paddingY0 relative"
  style={
    Object {
      "height": 200,
    }
  }
>
  <div
    className="box"
  />
</div>
`;

exports[`ScrollableContainer renders 1`] = `
<div
  className="box overflowAuto paddingX0 paddingY0 relative"
  style={
    Object {
      "height": "100%",
    }
  }
>
  <div
    className="box"
  />
</div>
`;
